-feature: Add Timezone support for Remote Data Collectors
-feature: Add One Minute Sampling to the default Data Source Profiles
-feature: Allow Top tabs to be Glyphs or Text or both
-feature: Update JavaScript library c3.js to version 0.5.4
-feature: Update JavaScript library jquery.tablesorter.js to version 2.30.5
-feature: Update JavaScript library jquery-migrate.js to 3.0.1
-feature: Update phpseclib to version 2.0.11
-feature: Update JavaScript library jquery.js to 3.3.1
-feature: Make Top Tabs use Ajax Callback
-feature: Make all user settings dynamic and allow resetting to default.
-feature: Change password page provides visible confirmation of password rules
-feature: Allow ASCII filepath paths to not be found on settings save
-feature: Provide option to debug width errors where output exceeds column width
-feature: Allow snmpagent to be disabled for very large installs
-feature: Inform the primary Cacti administrator of problems by Email
-feature: Add Graphs and Data Sources hyperlinks on Device page
-feature: Do not allow second data source to be added to an SNMP Get data template
-feature: Allow drill down from Graphs to Data Queries or Templates
-feature: Allow Adding Aggregate Graphs to a Report 
-feature: Don't allow removal of Data Sources from Data Template once its in use
-feature: Tree automation is now defaulted to on for new install
-feature: Allow Import/Export to be hookable
-feature: Add a Timeout setting for Remote Agent calls

1.1.38
-issue#1501: cmd.php poller not stripping alpha from snmp get values
-issue#1515: Special characters not rendered properly in settings
-issue#1530: Inconsistent behaviour handling blank Field Name/Value when editing data query suggested values
-issue#1537: Numeric validation not ignoring blank elements

1.1.37
-issue#274: Allow Realtime Graph Popup Mode
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1414: DSSTATS reports incorrectly that a data source does not exist